@@ -61,18 +61,50 @@ class tx_cfcleaguefe_table_TableFootball extends t3lib_svbase implements tx_cfcl
 		return $this->matchProvider;
 	}
 	/**
+	 * @return tx_cfcleaguefe_table_football_Configurator
+	 */
+	private function createConfigurator() {
+		$configuratorClass = $this->getConfValue('configuratorClass');
+		$configuratorClass = $configuratorClass ? $configuratorClass : 'tx_cfcleaguefe_table_football_Configurator';
+		$configurator = tx_rnbase::makeInstance($configuratorClass, $this->getMatchProvider(), $this->configuration, $this->confId);
+		return $configurator;
+	}
+	/**
 	 * Returns the final table data
 	 * @return tx_cfcleaguefe_table_ITableResult
 	 */
 	public function getTableData() {
-		$configuratorClass = $this->getConfValue('configuratorClass');
-		$configuratorClass = $configuratorClass ? $configuratorClass : 'tx_cfcleaguefe_table_football_Configurator';
-		$configurator = tx_rnbase::makeInstance($configuratorClass, $this->getMatchProvider(), $this->configuration, $this->confId);
+		$configurator = $this->createConfigurator();
 		$this->initTeams($configurator);
 		$this->handlePenalties(); // Strafen können direkt berechnet werden
 
-    $xyData = Array();
-		$rounds = $this->getMatchProvider()->getRounds();
+    $tableData = Array();
+    $rounds = $this->getMatchProvider()->getRounds();
+		$comparator = $configurator->getComparator();
+
+    foreach($rounds As $round => $roundMatches) {
+			$this->handleMatches($roundMatches, $configurator);
+			// Jetzt die Tabelle sortieren, dafür benötigen wir eine Kopie des Arrays
+			$teamData = $this->_teamData;
+			$comparator->setTeamData($teamData);
+			usort($teamData, array($comparator, 'compare'));
+			// Nun setzen wir die Tabellenstände
+			reset($teamData);
+			for($i=0; $i < count($teamData); $i++) {
+				$newPosition = $i +1;
+				$team = $teamData[$i];
+				if($this->_teamData[$team['teamId']]['position']) {
+					$oldPosition = $this->_teamData[$team['teamId']]['position'];
+					$this->_teamData[$team['teamId']]['oldposition'] = $oldPosition;
+					$this->_teamData[$team['teamId']]['positionchange'] = $this->getPositionChange($oldPosition, $newPosition);
+				}
+				$this->_teamData[$team['teamId']]['position'] = $newPosition;
+				// Jetzt die Daten des Teams übernehmen
+				$tableData[$round][] = $this->_teamData[$team['teamId']];
+			}
+    }
+    
+    return $tableData;
 	}
 
 	public function getTableWriter() {
@@ -126,6 +158,17 @@ class tx_cfcleaguefe_table_TableFootball extends t3lib_svbase implements tx_cfcl
 	}
 
 	/**
+	 * Returns position change, either UP or DOWN or EQ.
+	 *
+	 * @param int $oldPosition
+	 * @param int $newPosition
+	 * @return string UP, DOWN or EQ
+	 */
+	protected function getPositionChange($oldPosition, $newPosition) {
+		return $oldPosition == $newPosition ? 'EQ' : ($oldPosition > $newPosition ? 'UP' : 'DOWN');
+	}
+
+	/**
 	 * Die Ligastrafen werden in den Tabellenstand eingerechnet. Dies wird allerdings nur
 	 * für die normale Tabelle gemacht. Sondertabellen werden ohne Strafen berechnet.
 	 */
@@ -164,6 +207,191 @@ class tx_cfcleaguefe_table_TableFootball extends t3lib_svbase implements tx_cfcl
 		$this->_teamData[$teamId]['goals1'] = $this->_teamData[$teamId]['goals1'] + $goals1;
 		$this->_teamData[$teamId]['goals2'] = $this->_teamData[$teamId]['goals2'] + $goals2;
 		$this->_teamData[$teamId]['goals_diff'] = $this->_teamData[$teamId]['goals1'] - $this->_teamData[$teamId]['goals2'];
+	}
+
+
+	/**
+	 * Die Spiele werden zum aktuellen Tabellenstand hinzugerechnet
+	 * @param array $matches
+	 * @param tx_cfcleaguefe_table_football_Configurator $configurator
+	 */
+	protected function handleMatches(&$matches, tx_cfcleaguefe_table_football_Configurator $configurator) {
+		// Wir laufen jetzt über alle Spiele und legen einen Punktespeicher für jedes Team an
+		foreach($matches As $match) {
+			if($match->isDummy()) continue; // Ignore Dummy-Matches
+			// Wie ist das Spiel ausgegangen?
+			$toto = $match->getToto();
+			tx_rnbase_util_Misc::callHook('cfc_league_fe','leagueTableFootball_handleMatches', 
+				array('match' => &$match, 'teamdata'=>&$this->_teamData), $this);
+
+			// Die eigentliche Punktezählung richtet sich nach dem Typ der Tabelle
+			// Daher rufen wir jetzt die passende Methode auf
+			switch($configurator->getTableType()) {
+				case 1 :
+					$this->countHome($match, $toto, $configurator);
+					break;
+				case 2 :
+					$this->countGuest($match, $toto, $configurator);
+					break;
+				default:
+					$this->countStandard($match, $toto, $configurator);
+			}
+		}
+		unset($this->_teamData[0]); // Remove dummy data from teams without id
+	}
+	/**
+	 * Zählt die Punkte für eine normale Tabelle
+	 * @param tx_cfcleaguefe_models_match $match
+	 * @param int $toto
+	 */
+	protected function countStandard(&$match, $toto, tx_cfcleaguefe_table_football_Configurator $configurator) {
+		// Anzahl Spiele aktualisieren
+		$homeId = $configurator->getTeamId($match->getHome());
+		$guestId = $configurator->getTeamId($match->getGuest());
+		$this->addMatchCount($homeId);
+		$this->addMatchCount($guestId);
+		// Für H2H modus das Spielergebnis merken
+		$this->addResult($homeId, $guestId, $match->getResult());
+
+		if($toto == 0) { // Unentschieden
+			$this->addPoints($homeId, $configurator->getPointsDraw());
+			$this->addPoints($guestId, $configurator->getPointsDraw());
+			if($configurator->isCountLoosePoints()) {
+				$this->addPoints2($homeId, $configurator->getPointsDraw());
+				$this->addPoints2($guestId, $configurator->getPointsDraw());
+			}
+
+			$this->addDrawCount($homeId);
+			$this->addDrawCount($guestId);
+		}
+		elseif($toto == 1) {  // Heimsieg
+			$this->addPoints($homeId, $configurator->getPointsWin());
+			$this->addPoints($guestId, $configurator->getPointsLoose());
+			if($configurator->isCountLoosePoints()) {
+				$this->addPoints2($guestId, $configurator->getPointsWin());
+			}
+
+			$this->addWinCount($homeId);
+			$this->addLoseCount($guestId);
+		}
+		else { // Auswärtssieg
+			$this->addPoints($homeId, $configurator->getPointsLoose());
+			$this->addPoints($guestId, $configurator->getPointsWin());
+			if($configurator->isCountLoosePoints()) {
+				$this->addPoints2($homeId, $configurator->getPointsWin());
+			}
+			$this->addLoseCount($homeId);
+			$this->addWinCount($guestId);
+		}
+
+		// Jetzt die Tore summieren
+		$this->addGoals($homeId, $match->getGoalsHome(), $match->getGoalsGuest());
+		$this->addGoals($guestId, $match->getGoalsGuest(), $match->getGoalsHome());
+	}
+
+  /**
+   * Zählt die Punkte für eine Heimspieltabelle. Die Ergebnisse werden als nur für die 
+   * Heimmannschaft gewertet.
+	 * @param tx_cfcleaguefe_models_match $match
+	 * @param int $toto
+	 */
+	protected function countHome(&$match, $toto, tx_cfcleaguefe_table_football_Configurator $configurator) {
+		$homeId = $configurator->getTeamId($match->getHome());
+		$guestId = $configurator->getTeamId($match->getGuest());
+		// Anzahl Spiele aktualisieren
+		$this->addMatchCount($homeId);
+		$this->addResult($homeId, $guestId, $match->getGuest());
+
+		if($toto == 0) { // Unentschieden
+			$this->addPoints($homeId, $configurator->getPointsDraw());
+			if($this->getTableProvider()->isCountLoosePoints()) {
+				$this->addPoints2($homeId, $configurator->getPointsDraw());
+			}
+			$this->addDrawCount($homeId);
+		}
+		elseif($toto == 1) {  // Heimsieg
+			$this->addPoints($homeId, $configurator->getPointsWin());
+			$this->addWinCount($homeId);
+		}
+		else { // Auswärtssieg
+			$this->addPoints($homeId, $configurator->getPointsLoose());
+			if($configurator->isCountLoosePoints()) {
+				$this->addPoints2($homeId, $configurator->getPointsWin());
+			}
+			$this->addLoseCount($homeId);
+		}
+		// Jetzt die Tore summieren
+		$this->addGoals($homeId, $match->getGoalsHome(), $match->getGoalsGuest());
+	}
+
+	/**
+	 * Zählt die Punkte für eine Auswärtstabelle. Die Ergebnisse werden als nur für die 
+   * Gastmannschaft gewertet.
+	 * @param tx_cfcleaguefe_models_match $match
+	 * @param int $toto
+	 */
+	protected function countGuest(&$match, $toto, tx_cfcleaguefe_table_football_Configurator $configurator) {
+		$homeId = $configurator->getTeamId($match->getHome());
+		$guestId = $configurator->getTeamId($match->getGuest());
+		// Anzahl Spiele aktualisieren
+		$this->addMatchCount($guestId);
+		$this->addResult($homeId, $guestId, $match->getGuest());
+
+		if($toto == 0) { // Unentschieden
+			$this->addPoints($guestId, $configurator->getPointsDraw());
+			if($configurator->isCountLoosePoints()) {
+				$this->addPoints2($guestId, $configurator->getPointsDraw());
+			}
+			$this->addDrawCount($guestId);
+		}
+		elseif($toto == 1) {  // Heimsieg
+			$this->addPoints($guestId, $configurator->getPointsLoose());
+			if($configurator->isCountLoosePoints()) {
+				$this->addPoints2($guestId, $configurator->getPointsWin());
+			}
+			$this->addLoseCount($guestId);
+		}
+		else { // Auswärtssieg
+			$this->addPoints($guestId, $configurator->getPointsWin());
+			$this->addWinCount($guestId);
+		}
+
+		// Jetzt die Tore summieren
+		$this->addGoals($guestId, $match->getGoalsGuest(), $match->getGoalsHome());
+	}
+
+	private function addResult($homeId, $guestId, $result) {
+		$this->_teamData[$homeId]['matches'][$guestId] = $result;
+	}
+	/**
+	 * Addiert Punkte zu einem Team
+	 */
+	private function addPoints($teamId, $points) {
+		$this->_teamData[$teamId]['points'] = $this->_teamData[$teamId]['points'] + $points;
+	}
+
+	/**
+	 * Addiert negative Punkte zu einem Team. Diese Funktion wird nur im 2-Punkte-System
+	 * verwendet.
+	 */
+	private function addPoints2($teamId, $points) {
+		$this->_teamData[$teamId]['points2'] = $this->_teamData[$teamId]['points2'] + $points;
+	}
+	/**
+	 * Addiert die absolvierten Spiele zu einem Team
+ 	 */
+	private function addMatchCount($teamId) {
+		$this->_teamData[$teamId]['matchCount'] = $this->_teamData[$teamId]['matchCount'] + 1;
+	}
+
+	private function addWinCount($teamId) {
+		$this->_teamData[$teamId]['winCount'] = $this->_teamData[$teamId]['winCount'] + 1;
+	}
+	private function addDrawCount($teamId) {
+		$this->_teamData[$teamId]['drawCount'] = $this->_teamData[$teamId]['drawCount'] + 1;
+	}
+	private function addLoseCount($teamId) {
+		$this->_teamData[$teamId]['loseCount'] = $this->_teamData[$teamId]['loseCount'] + 1;
 	}
 }
 
